# py-routine

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bench.yml  ci.yml  publish.yml
benchmarks/: check.py  run.py
examples/: benchmark_comparison.py  shared_memory_showcase.py  worker_pool.py
src/pyroutine/: __init__.py  _chan.py  _context.py  _debug.py  _helpers.py  _routines.py  _select.py  _sync.py  aio.py
tests/: test_aio.py  test_chan.py  test_context.py  test_debug.py  test_env.py  test_helpers.py  test_new_features.py  test_prepared_select.py  test_property.py  test_routines_and_sync.py  test_scheduler.py  test_select.py  test_sync_extras.py
