[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "py-routine"
version = "0.1.0"
description = "Go style concurrency for Python: routines, channels, select and WaitGroup"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Gautam Singh", email = "gautamsingh1997@gmail.com" },
]
keywords = [
    "concurrency",
    "channels",
    "goroutines",
    "csp",
    "threading",
    "free-threading",
    "select",
    "waitgroup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/singhgautam7/py-routine"
Repository = "https://github.com/singhgautam7/py-routine"
Issues = "https://github.com/singhgautam7/py-routine/issues"
Changelog = "https://github.com/singhgautam7/py-routine/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyroutine"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyroutine",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
filterwarnings = [
    # the GIL notice is expected on regular builds, keep test output clean
    "ignore:pyroutine.:RuntimeWarning",
]
